# synergetic-sqr

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  GLOSSARY.md  HARDWARE.md  LICENSE  Makefile  PHYSICS.md  README.md  REFERENCES.md  RESEARCH.md  SPECIFICATION.md  SURDLANG.md  TECHNICAL_REPORT.md  arch_sim  flash_map.json  requirements.txt  smul_sim  sperm_sim  spu11_sim  spu_arch_sim  spu_formal_bin  spu_sim  sqr_fast  sqr_test
.github/workflows/: verify.yml
SPECULATIVE/: README.md
SPECULATIVE/docs/: BIO_LAMINAR_MAPPING.md  CRYSTAL_MANIFOLD.md  LAMINAR_COMPONENTRY.md  MINIMUM_HYSTERESIS_PROOF.md  PHOTONICS_PLAN.md  TOPOLOGICAL_ROUTING.md
blueprint/: ALU_SPEC.md
boards/arty_a7_35t/: Laminar_v1.xdc  Makefile  README.md  build_spu13.tcl  spu_arty_a7.xdc  top.v
boards/icebreaker/: README.md  icebreaker.pcf  top.v
boards/icesugar/: BRINGUP.md  CHECKLIST.md  HARDWARE_OVERVIEW.md  Makefile  README.md  SPU13_UNBOXING_BUNDLE.v  build_spu13.sh  icesugar.pcf  icesugar_full_manifold.v  rotor_sin.hex  spu13_cortex.v  spu13_golden_reification.v  spu13_icesugar_full.pcf  spu13_icesugar_v2.pcf  spu13_minimal.pcf  spu13_sovereign.vcd  spu13_sovereign_top.v  spu13_top.v
boards/icesugar_nano/: README.md  build_nano.sh  nano.pcf  spu13_nano_guardian.asc  spu13_nano_guardian.json  spu13_nano_seed.asc  spu13_nano_seed.json  top.v  top_guardian.v
boards/orangecrab/: Laminar_v1.lpf  Makefile  README.md  orangecrab.lpf  top.v
boards/tang_nano_20k/: Laminar_Gowin.cst  Makefile  README.md  build_tang_nano.sh  lean_top.v  tang_nano_20k.cst  top.v
boards/tinyfpga_bx/: README.md  tinyfpga_bx.pcf  top.v
boards/ulx3s/: README.md  build_ulx3s.sh  harmonic_top.v  lean_top.v  top.v  ulx3s.lpf
constraints/: geodesic_fractal.pcf  geodesic_fractal.sdc
demos/renderer/: DQFA.metal  LUTHeatmap.metal  LaminarGrid.metal  LaminarMassage.metal  LaminarPBR.metal  LatticeStressMap.metal  LithicForge.hpp  NerveProxy.hpp  PmodVessel.hpp  SovereignKernel.metal  SynergeticKernel.glsl  SynergeticKernelFinal.metal  SynergeticRenderer.cpp  SynergeticRenderer.hpp  main.cpp
docs/: ABRAXAS_SHIELD.md  BIO_INTERFACE.md  BIO_SAFETY.md  BIO_TELEMETRY.md  BOOT_SPEC.md  BURN_IN_PLAN.md  DISPLAY_ROADMAP.md  ETHICS.md  EXECUTIVE_SUMMARY.md  FORMAL_OVERVIEW.md  FRACTAL_UI.md  GLOSSARY.md  GROUNDING.md  HARDWARE_MANUAL.md  IO_SPEC.md  LAMINAR_FLUIDS.md  LAMINAR_MANIFEST.md  PE1_SPEC.md  PHI_CLOSURE.md  PHYSICS.md  PREFLIGHT_CHECKLIST.md  PRIME_AXIS.md  RE1_SPEC.md  RECALIBRATION.md  RESEARCH.md  RULIAD_SYNC.md  SAFETY.md  SOVEREIGN_SHIELD.md  SQR_LANG_SYNTAX.md  STABILIZATION.md  SUNFLOWER_QUICKSTART.md  SURDLANG_REIFIED.md  TECHNICAL_REPORT.md  TEMPORAL_COHERENCE.md  THEORY.md  VERIFICATION_ANGLES.md  VISITOR_GUIDE.md  WHITE_PAPER.md  v2.0_EXECUTIVE_SUMMARY.md
docs/math/: ivm-proof.md
docs/neurology/: BIO_RESONANCE_TEMPLATE.md  CALL_FOR_PARTNERS.md  IVM_NEURO_ABSTRACT.md  bio-security.md
docs/paradigms/: LAMINAR_ENGINEERING_PRINCIPLES.md  LAMINAR_RENDER_THEORY.md  LAMINAR_SIGNAL_THEORY.md  LITHIC_PROTOCOL.md  LaminarForge_KnotBreaker.md  RESONANT_OS_SPEC.md  SOVEREIGN_COMPASS.md  SOVEREIGN_TYPEFACE_SPEC.md  STOCHASTIC_MANIFOLD.md
docs/protocol/: SOVEREIGN_DISPLAY_PROTOCOL.md  registry.md
docs/spec/: ALLIED_VECTOR_MAP.md  ALPHA_RELEASE.md  ALU_SPEC.md  ARCHITECT_MANIFEST.md  (+74 more)
hardware/: README_FPGA.md  build_spu13.tcl
rtl/: phi_rotor_scaler.v  spu13_rotor_core.v  spu1_tb.v  spu_artery_phy.v  spu_bio_gateway.v  spu_bowman_sequencer.v  spu_core.v  spu_dream_log.v  spu_ecc.v  spu_fluid_solver.v  spu_formal.v  spu_fractal_clk.v  spu_geometry_fluidizer.v  spu_gram_controller.v  spu_harmonic_handshake.v  spu_harmonic_vis.v  spu_identity_monad.v  spu_impressionist_rotor.v  spu_io_bridge.v  spu_laminar_gate.v  spu_laminar_power.v  spu_lattice_13.v  spu_nano_balancer.v  spu_nano_core.v  spu_oled_visualizer.v  spu_permute_13.v  spu_permute_tb.v  spu_proprioception.v  spu_quadrance_calc.v  spu_rational_trig.v  spu_self_test.v  spu_sqr_rotor.v  spu_ssd1306_driver.v  spu_tensegrity_balancer.v  spu_thalamus.v  spu_whisper_tx.v  surd_uart_tx.v
software/: blink_resonance.sas  bloom.hex  bloom.sas  gulp.hex  gulp.sas  hello_manifold.hex  hello_manifold.lith  laminar_bridge_rp2040.cpp  surge.hex  surge.sas  vacuum.hex  vacuum.sas
souls/: .gitignore  manifest.json
spu_formal/: spu13_formal.sv  spu13_reachability.sby  vd_determinant.sby  vd_determinant.smt2  vd_determinant.sv
src/: DQFA.metal  Models.hpp  SynergeticKernel.glsl  SynergeticKernel.metal  SynergeticKernelFinal.metal  SynergeticRenderer.cpp  SynergeticRenderer.hpp  SynergeticsMath.hpp  main.cpp  main.mm
tests/: black_background_audit.v  bulletproof_verification.cpp  chaos_verification.cpp  collision_verification.cpp  extreme_chaos_verification.cpp  fluid_parabolic_verify.cpp  hull_verification.cpp  identity_closure.surd  laminar_vs_cubic.cpp  phi_scaling_verification.cpp  quadray_graphics_verification.cpp  rigorous_verification.cpp  sb_spram_sim.v  sdk_verification.cpp  species_integrity_test.sh  spu13_verification.cpp  spu1_tb.v  spu_bio_gateway_tb.v  spu_bowman_wake_tb.v  spu_current_audit_tb.v  spu_formal_proxy.v  spu_fractal_bypass_tb.v  spu_harmonic_handshake_tb.v  spu_harmonic_vis_tb.v  spu_i2c_audit_tb.v  spu_identity_monad_tb.v  spu_lattice_fluid_tb.v  spu_metabolic_tb.v  spu_proprioception_tb.v  spu_rational_trig_tb.v  spu_sensory_audit_tb.v  spu_transducer_tb.v  sqr_determinism_tb.v  vd_determinant_verify.cpp
tools/: PIONEER_POST.md  audit_soul.py  bio_resonance_monitor.py  bridge_legacy.py  fleet_flush.py  fpga_bitmask_ref.py  fractal_trace.py  free_energy_report.py  hysteresis_verify.py  inference_logger.py  laminar_audit.py  laminar_c.py  laminar_sandbox.py  laminar_tex_compress.py  lattice_listener.py  manifold_calibrate.py  pre_push_audit.sh  redaction_filter.py  resonance_stress_test.py  silence_monitor.py  soul_mate.py  soul_vessel.py  spu13_asm.py  spu13_asm.rs  spu_birth_certificate.py  spu_forge.py  spu_sanity_check.py  surd_math.rs  synthesize_sovereign.sh  test_golden_core.sh  test_nerve_proxy.py  verify_parabola.py
(+234 files in other folders)
